--- a/views/patient_specifics.hbs
+++ b/views/patient_specifics.hbs
@@ -163,10 +163,12 @@
 
     <div class="patient-specifics-graph">
         <h2 class="blue-text">Statistical Graph</h2>
+        <img src="../assets/line-graph.png" class="line-graph">
     </div>
 
     <div class="patient-specifics-month">
         <h2 class="blue-text">Monthly Overview</h2>
+        <img src="../assets/monthly-overview.png" class="overview-graph">
     </div>
 </div>
 <br>
