--- a/views/clinician_profile_settings.hbs
+++ b/views/clinician_profile_settings.hbs
@@ -16,13 +16,13 @@
                 <div class="settings_container">
                 <h2 class="settings_heading">Account Details</h2>
                     <label for="firstname"><b>First Name</b></label>
-                    <input id="firstname" type="text" placeholder="'John'" name="firstname" disabled>
+                    <input id="firstname" type="text" placeholder="John" name="firstname" disabled>
 
                     <label for="lastname"><b>Last Name</b></label>
-                    <input id="lastname" type="text" placeholder="'Smith'" name="lastname" disabled>
+                    <input id="lastname" type="text" placeholder="Smith" name="lastname" disabled>
 
                     <label for="Username"><b>Username</b></label>
-                    <input id="Username" type="text" placeholder="'jsmith'" name="Username" disabled>
+                    <input id="Username" type="text" placeholder="jsmith" name="Username" disabled>
 
                     <a class="settings_button" href="clinician_edit_profile.html">EDIT PROFILE</a>
                 </div>
