--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2118,14 +2118,15 @@ input[id=lname] {
 
 /*----------------------------------------------------------------------------------------------------------------------*/
 /*Clinician and Patient Profile Settings CSS -- work in progress, need to make responsive*/
-.detailsform {
-    border: 1px solid #E7E7E7;
+.cliniciansettings {
     background-color: #FFFFFF;
-    border-radius: 38px;
+    border-bottom-left-radius: 38px;
+    border-bottom-right-radius: 38px;
     filter: drop-shadow(4px 4px 3px #858484);
     padding-top: 5%;
     padding-bottom: 5%;
-    margin-bottom: 5%;
+    margin: 0% 5% 5% 5%;
+    border-top: #7D92DB 5px solid;
 }
 
 .settings_heading{
@@ -2178,7 +2179,6 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
     margin: 8px 0;
     border: none;
     cursor: pointer;
-    width: 100%;
     display: flex;
     border-radius: 38px;
     filter: drop-shadow(4px 4px 3px #D4D4D4);
@@ -2189,6 +2189,7 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
     justify-content: center;
     transition: all 0.5s ease 0s;
     margin-top: 5%;
+    width: 100%;
 }
   
   /* Add a hover effect for buttons */
@@ -2207,29 +2208,17 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
 .innerbound{
     display: flex;
     justify-content: center;
-    padding: 2% 10% 2% 10%;
+    padding: 2% 8% 2% 8%;
 
 }
 
-<<<<<<< HEAD
-
-/*---------------- graphs --------------------*/
-
-.line-graph{
-    height: 485px;
-    width: 100%;
-    padding-top: 20px;
-}
-
-.overview-graph{
-    padding-top: 20px;
-}
-=======
 /* Clinician  Tab Styling*/
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
     background-color: #f1f1f1;
+    border-radius: 15px 15px 0 0;
+    margin:0% 5% 0% 5%;
+    filter: drop-shadow(4px 4px 3px #858484);
   }
   
   /* Style buttons tab content */
@@ -2241,6 +2230,11 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
     cursor: pointer;
     padding: 14px 16px;
     transition: 0.3s;
+    font-family: 'Poppins';
+    font-size: 20px;
+    font-weight: bolder;
+    border-radius: 15px 15px 0 0;
+    width: 50%;
   }
   
   /* Background color of buttons on hover */
@@ -2250,14 +2244,14 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
   
   /* Active/current tablink class */
   .tab button.active {
-    background-color: #ccc;
+    background-color: #7D92DB;
+    color: #FFFFFF
   }
   
   /* tab content */
   .tabcontent {
     display: none;
     padding: 6px 12px;
-    border: 1px solid #ccc;
     border-top: none;
   }
 
@@ -2270,4 +2264,20 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
     from {opacity: 0;}
     to {opacity: 1;}
   }
->>>>>>> bf87b3fcf901ed712b4d3ff9e74685fe43f1de85
+
+
+
+
+
+/*---------------- graphs --------------------*/
+
+.line-graph{
+    height: 485px;
+    width: 100%;
+    padding-top: 20px;
+}
+
+.overview-graph{
+    padding-top: 20px;
+}
+
