working on password submission for settings

--- a/views/patient_change_pwd.hbs
+++ b/views/patient_change_pwd.hbs
@@ -18,10 +18,10 @@
                     <input id="Username" type="text" placeholder="jsmith" name="Username" disabled>
 
                     <label for="psw"><b>New Password</b></label>
-                    <input id="psw" type="password" placeholder="Password" name="psw">
+                    <input id="psw" type="password" placeholder="Password" name="password">
 
                     <label for="psw"><b>Re-enter New Password</b></label>
-                    <input id="psw" type="password" placeholder="Re-enter Password" name="psw">
+                    <input id="psw" type="password" placeholder="Re-enter Password" name="password">
 
                     <input class="settings_button" type = "submit" value="SAVE CHANGES">
                 </div>
