--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -2,7 +2,7 @@
 <br>
 <h1 class="clinician-title">Patient Overview</h1>
 
-<button class="patient-button purple2" onclick="location.href='/clinician_dashboard/settings'">Clinician Settings</button>
+<button class="patient-button purple2" onclick="location.href='/clinician_dashboard/settings'">SETTINGS BUTTON PLACEHOLDER</button>
 {{!-- <button class="patient-button purple2" onclick="location.href='/clinician_dashboard/settings'">PROFILE SETTINGS</button> --}}
 
 
