patient history graph

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2211,10 +2211,9 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
 
 }
 
-<<<<<<< HEAD
 
 /*---------------- graphs --------------------*/
-
+/*patient specifics*/
 .line-graph{
     height: 485px;
     width: 100%;
@@ -2224,7 +2223,25 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
 .overview-graph{
     padding-top: 20px;
 }
-=======
+
+/*history*/
+.history-graph{
+    width: 90%;
+    justify-self: center;
+    align-self: center;
+    padding-top: 60px;
+
+}
+
+.patient-graph{
+    padding-top: 10px;
+    /* justify-self: center;
+    align-content: center; */
+    width: 100%;
+    max-height: 700px;
+}
+
+/* ---------------- end of graph styling--------------------- */
 /* Clinician  Tab Styling*/
 .tab {
     overflow: hidden;
@@ -2270,4 +2287,3 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
     from {opacity: 0;}
     to {opacity: 1;}
   }
->>>>>>> bf87b3fcf901ed712b4d3ff9e74685fe43f1de85
