--- a/views/patient_history.hbs
+++ b/views/patient_history.hbs
@@ -28,5 +28,10 @@
         </span>
     </button>
     {{/each}}
+
+    <div class="history-graph">
+        <h2 class="blue-text">Overview</h2>
+        <img src="../assets/line-graph.png" class="patient-graph">
+    </div>
 </div>
 
