--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2216,7 +2216,7 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
 /*---------------- graphs --------------------*/
 /*patient specifics*/
 .line-graph{
-    height: 485px;
+    height: 82%;
     width: 100%;
     padding-top: 20px;
 }
