added name and role to dashboard

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -32,10 +32,10 @@
         <nav>
             <ul class="flexbox-navbar-profile">
                 <li class="nav-username">
-                    <p>{{user.username}}</p>
+                    <p>{{userName}}</p>
                 </li>
                 <li class="nav-userstatus">
-                    <p>{{role}}</p>
+                    <p>{{userRole}}</p>
                     {{!-- <p>USER</p> --}}
                 </li>
             </ul>
