--- a/views/clinician_dashboard.hbs
+++ b/views/clinician_dashboard.hbs
@@ -1,10 +1,13 @@
 <script src="scripts/script.js"></script>
 <br>
-<h1 class="clinician-title">Patient Overview</h1>
+<div class="topbar">
+    <h1>Patient Overview</h1>
+    <button class="settings_btn purple2" onclick="location.href='/clinician_dashboard/settings'">
+        <img src="../assets/settings.png" width="20" height="20">
+    </button>
+</div>
 
-<button class="patient-button purple2" onclick="location.href='/clinician_dashboard/settings'">SETTINGS BUTTON PLACEHOLDER</button>
 {{!-- <button class="patient-button purple2" onclick="location.href='/clinician_dashboard/settings'">PROFILE SETTINGS</button> --}}
-
 
 <div class="topbar">
     <div class="searchbar">
