--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -201,9 +201,6 @@ header {
 /*-------------------------------END RECORD_HEALTH PAGES---------------------------------*/
 
 /*-------------------------------CLINICIAN PAGES-----------------------------------------*/
-.clinician-title {
-    margin-left: 5%;
-}
 .header-bar{
     display: flex;
     flex-direction: row;
@@ -296,8 +293,9 @@ input:focus {
 }
 
 .flexbox-sortby {
+    font-size: 15px;
     padding-top: 8px;
-    margin-right: 2%;
+    margin-right: 1%;
 }
 
 /*
@@ -2175,14 +2173,15 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
 .settings_container {
     padding: 10px 15%;/* First value: padding top and bottom. Second value: padding on sides. */ 
 }
+
 .settings_button {
     background-color: #7D92DB;
-    color: white; padding: 14px 20px;
-    margin: 8px 0;
+    color: white; 
+    padding: 14px 20px;
     border: none;
     cursor: pointer;
     display: flex;
-    border-radius: 38px;
+    border-radius: 50px;
     filter: drop-shadow(4px 4px 3px #D4D4D4);
     font-size: 20px;
     font-weight:bold;
@@ -2196,6 +2195,30 @@ input[id=firstname], input[id=lastname], input[id=Username], input[id=psw] {
   
   /* Add a hover effect for buttons */
 .settings_button:hover {
+    opacity: 0.8;
+    transform: scale(1.05);
+
+}
+
+.settings_btn {
+    background-color: #7D92DB;
+    color: white; 
+    padding: 18px;
+    margin-left: auto; 
+    margin-right: 5%;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    border-radius: 38px;
+    filter: drop-shadow(4px 4px 3px #D4D4D4);
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease 0s;
+}
+  
+  /* Add a hover effect for buttons */
+.settings_btn:hover {
     opacity: 0.8;
     transform: scale(1.05);
 
