--- a/views/clinician_edit_profile.hbs
+++ b/views/clinician_edit_profile.hbs
@@ -1,7 +1,7 @@
 <body>
-    <h1 class="page_heading">Profile Settings</h1>
+    <h1 class="page_heading">Settings</h1>
         <div class="settings-form-container">
-            <form class="detailsform" action="/" method="post">
+            <form class="cliniciansettings" action="/" method="post">
             <div class="innerbound">
                 <img src="../assets/placeholder-image.png" class= "placeholderimg">
                 
@@ -22,7 +22,7 @@
                     <label for="psw"><b>Re-enter New Password</b></label>
                     <input id="psw" type="password" placeholder="Re-enter Password" name="psw">
 
-                    <a class="settings_button" href="clinician_profile_settings.html">SAVE CHANGES</a>
+                    <button class="settings_button" onclick="location.href='/clinician_dashboard/settings'">SAVE CHANGES</button>
 
                 <br>
 
