--- a/views/clinician_profile_settings.hbs
+++ b/views/clinician_profile_settings.hbs
@@ -14,7 +14,6 @@
                         <img src="../assets/placeholder-image.png" class= "placeholderimg">
                         
                         <div class="settings_container">
-                        <h2 class="settings_heading">Account Details</h2>
                             <label for="firstname"><b>First Name</b></label>
                             <input id="firstname" type="text" placeholder="John" name="firstname" disabled>
         
@@ -24,7 +23,7 @@
                             <label for="Username"><b>Username</b></label>
                             <input id="Username" type="text" placeholder="jsmith" name="Username" disabled>
         
-                             <button class="settings_button" onclick="location.href='/clinician_dashboard/edit'">EDIT PROFILE</button>
+                            <a class="settings_button" href="clinician_edit_profile">EDIT PROFILE</a>
                         </div>
                     </div>
                 </div>
@@ -34,7 +33,6 @@
                         <img src="../assets/placeholder-image.png" class= "placeholderimg">
                         
                         <div class="settings_container">
-                            <h2 class="settings_heading">Register Patient</h2>
                             <label for="firstname"><b>Patient First Name</b></label>
                             <input id="firstname" type="text" placeholder="'John'" name="firstname">
             
@@ -50,7 +48,7 @@
                             <label for="psw"><b>Re-enter Password</b></label>
                             <input id="psw" type="password" placeholder="Re-enter Password" name="psw">
             
-                            <button class="settings_button">Register Patient</button>
+                            <button class="settings_button">REGISTER PATIENT</button>
                         </div>
                     </div>
                 </div>
