--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -25,6 +25,7 @@
         <a href="{{logoURL}}" class="flexbox-navbar-logo"><img src="../assets/logo_navbar.png" width="175px"
                 height="85px" alt="Diabetes@Home Logo"></a>
         {{!-- <p>Logged in as {{user.username}}. User secret is {{user.secret}}.</p> --}}
+        <a href="about_diabetes" class="nav-logout-icon"><img src="../assets/logout-icon.png"></a>
         <img class="nav-msg-icon" src="../assets/navbar_message_icon.png">
         <img class="nav-profile-verticle-bar" src="../assets/navbar_line_verticle.png">
         <img class="nav-profile-icon" src="../assets/navbar_profile_icon.png">
