--- a/views/clinician_edit_profile.hbs
+++ b/views/clinician_edit_profile.hbs
@@ -28,7 +28,7 @@
                             <label for="psw"><b>Re-enter New Password</b></label>
                             <input id="psw" type="password" placeholder="Re-enter Password" name="psw">
 
-                             <a class="settings_button" href="clinician_profile_settings">SAVE CHANGES</a>
+                             <a class="settings_button" href="../clinician_dashboard/settings">SAVE CHANGES</a>
                         </div>
                     </div>
                 </div>
