--- a/views/clinician_profile_settings.hbs
+++ b/views/clinician_profile_settings.hbs
@@ -23,7 +23,7 @@
                             <label for="Username"><b>Username</b></label>
                             <input id="Username" type="text" placeholder="jsmith" name="Username" disabled>
         
-                            <a class="settings_button" href="clinician_edit_profile">EDIT PROFILE</a>
+                            <a class="settings_button" href="../clinician_dashboard/edit">EDIT PROFILE</a>
                         </div>
                     </div>
                 </div>
