--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -465,6 +465,18 @@ select {
     align-items: center;
 }
 
+.grid-patient-data-exceeded {
+    grid-row-start: 2;
+    grid-row-end: 3;
+    border-left: 3px solid #ececee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(0, 0, 0);
+    background-color: #e713139f;
+    font-weight: bold;
+}
+
 .grid-patient-action-required {
     height: 175px;
     width: 20%;
